# OpenGothic

./: CMakeLists.txt
game/: main.cpp  mainwindow.cpp  mainwindow.h  marvin.cpp  marvin.h
game/ui/: menuroot.cpp
tools/dmaudit/: CMakeLists.txt  dmaudit.cpp
